<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">CrazyAndroid</string>
    <string name="button_text">press me</string>
    <string name="code_view">CodeView button</string>
    <string name="code_view_button_text">CodeView button</string>
    <string name="code_view_activity">CodeViewActivity</string>
    <string name="max_view_button_text">MaxView button</string>
    <string name="max_view_activity">MaxViewActivity</string>
    <string name="custom_view_button_text">CustomView button</string>
    <string name="custom_view_activity">CutsomViewActivity</string>
    <string name="single_button_per_table_row">SingleButton Per Table Row</string>
    <string name="generic_button">Generic Button</string>
    <string name="shrink_button">Shrink Button</string>
    <string name="stretch_button">Stretch Button</string>
    <string name="launcher_open_button">Android Launcher</string>
    <string name="table_layout_button_text">Table Layout Button</string>
    <string name="table_layout_activity">TableLayoutActivity</string>
    <string name="frame_layout_button_text">Frame Layout Button</string>
    <string name="frame_layout_activity">FrameLayoutActivity</string>
    <string name="color_light_button_text">Color Light Button</string>
    <string name="color_light_activity">ColorLightActivity</string>
    <string name="relative_layout_button_text">Relative Layout Button</string>
    <string name="relative_layout_activity">RelativeLayoutActivity</string>
    <string name="absolute_layout_button_text">Absolute Layout Button</string>
    <string name="absolute_layout_activity">AbsoluteLayoutActivity</string>
    <string name="user_name">User Name: </string>
    <string name="user_name_hint">Input your User Name here</string>
    <string name="pass_word">Pass Word: </string>
    <string name="phone_number">Phone Number</string>
    <string name="log_in">Log In</string>
    <string name="i_love_java">I Love Java</string>
    <string name="i_love_java_again_and_again">I Love Java I Love Java I Love Java I Love Java </string>
    <string name="email_link">Email Link new@new.com</string>
    <string name="test_word">Test Words</string>
    <string name="basic_button_text">Basic Activity List</string>
    <string name="basic_activity">BasicActivity</string>
    <string name="text_view_button_text">TextView Button</string>
    <string name="text_view_activity">TextViewActivity</string>
    <string name="text_with_border">Text With Border</string>
    <string name="text_with_image">Text With Image</string>
    <string name="login_button_text">Log In Button</string>
    <string name="login_activity">LogInActivity</string>
    <string name="image_button_text">Image Button</string>
    <string name="image_button_activity">Image Button Activity</string>
    <string name="patch9_button_text">patch9 Button</string>
    <string name="patch9_activity">Patch9 Activity</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="liked_color">Liked Color :</string>
    <string name="red_color">Red</string>
    <string name="blue_color">Blue</string>
    <string name="green_color">Green</string>
    <string name="radio_check_button_text">Radio Check Button</string>
    <string name="radio_check_activity">Radio Check Activity</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="toggle_button_text">Toggle Button</string>
    <string name="toggle_button_activity">Toggle Button Activity</string>
    <string name="clock_button_text">Clock Button</string>
    <string name="clock_activity">Clock Activity</string>
    <string name="increase_alpha">Increase Alpha</string>
    <string name="decrease_alpha">Decrease Alpha</string>
    <string name="next">Next </string>
    <string name="image_activity">Image Activity</string>
    <string name="advance_activity_button_text">Advance Activity Button</string>
    <string name="advance_activity">Advance Activity</string>
    <string name="autocomplete_button_text">AutoComplete Button</string>
    <string name="autocomplete_activity">AutoComplete Activity</string>
    <string name="loved_book">Loved book:</string>
    <string name="spinner_button_text">Spinner Button</string>
    <string name="time_book">Time of buying this book: </string>
    <string name="spinner_activity">Spinner Activity</string>
    <string name="time_date_button_text">TimeDateButton</string>
    <string name="time_date_activity">TimeDate Activity</string>
    <string name="polygon_button_text">Polygon Button</string>
    <string name="polygon_activity">Polygon Activity</string>
    <string name="gl2_button_text">GL2 Button</string>
    <string name="gl2_activity">GL2 Activity</string>
    <string name="finished_progress">Finished Progress</string>
    <string name="progress_activity">Progress Activity</string>
    <string name="progress_button_text">Progress Button</string>
    <string name="progress2_button1_text">Show Progress Bar</string>
    <string name="progress2_button2_text">hide Progress Bar</string>
    <string name="progress_activity_2">Progress Activity 2</string>
    <string name="progress_button_2_text">Progress Button 2</string>
    <string name="seekbar_button_text">Seekbar Button</string>
    <string name="seekbar_activity">SeekBar Activity</string>
    <string name="contact_name_1"> Joey 159 6860 8213</string>
    <string name="contact_name_2"> Parry 153 7053 2411</string>
    <string name="tabhost_activity">TabHost Activity</string>
    <string name="tabhost_button_text">TabHost Button</string>
    <string name="many_scrollview">Many ScrollView Many ScrollView Many ScrollView Many ScrollView </string>
    <string name="scroll_button_text">Scroll Button</string>
    <string name="scroll_activity">Scroll Activity</string>
    <string name="adapter_button_text">Adapter Button</string>
    <string name="adapter_activity">Adapter Activity</string>
    <string name="listadapter_button_text">ListAdapter Button</string>
    <string name="list_adapter_activity">ListAdapter Activity</string>
    <string name="expandablelist_button_text">ExpandableList Button</string>
    <string name="expandablelist_activity">ExpandableList Activity</string>
    <string name="grid_activity">Grid Activity</string>
    <string name="grid_button_text">Grid Button</string>
    <string name="gallery_activity">Gallery Activity</string>
    <string name="gallery_button_text">Gallery Button</string>
    <string name="text_hint">some text here</string>
    <string name="ok">OK</string>
    <string name="dialog_button_text_1">Dialog Button1</string>
    <string name="dialog_activity">Dialog Activity</string>
    <string name="listdialog_activity">ListDialog Activity</string>
    <string name="listdialog_button_text">ListDialog Button</string>
    <string name="singledialog_button_text">SingleDialog Button</string>
    <string name="singledialog_activity">SingleDialog Activity</string>
    <string name="multidialog_activity">MultiDialog Actvity</string>
    <string name="multidialog_button_text">MultiDialog Button</string>
    <string name="customdialog_button_text">CustomDialog Button</string>
    <string name="customdialog_activity">CustomDialog Activity</string>
    <string name="logindialog_activity">LoginDialog Activity</string>
    <string name="logindialog_button_text">LoginDialog Button</string>
    <string name="popupwindow_activity">PopUpWindow Activity</string>
    <string name="popupwindow_button_text">PopUpWindow Button</string>
    <string name="datedialog_button_text">DateDialog Button</string>
    <string name="datedialog_activity">DateDialog Activity</string>
    <string name="datebn">Date Button</string>
    <string name="timebn">Time Button</string>
    <string name="progressdialog_activity">ProgressDialog Activity</string>
    <string name="progressdialog_button_text">ProgressDialog Button</string>
    <string name="toast_activity">Toast Activity</string>
    <string name="toast_button_text">Toast Button</string>
    <string name="notification_activity">Notification Activity</string>
    <string name="notification_button_text">Notification Button</string>
    <string name="menu_activity">Menu Activity</string>
    <string name="menu_button_text">Menu Button</string>
    <string name="checkablemenu_activity">CheckableMenu Activity</string>
    <string name="checkablemenu_button_text">CheckableMenu Button</string>
    <string name="contextmenu_activity">ContextMenu Activity</string>
    <string name="contextmenu_button_text">ContextMenu Button</string>
    <string name="plane_activity">Plane Activity</string>
    <string name="plane_button_text">Plane Button</string>
    <string name="clickable_button_text">Clickable Button</string>
    <string name="clickablebutton_activity">Clickable Button Activity</string>
    <string name="config_activity">Configuration Activity</string>
    <string name="config_button_text">Config Button</string>
    <string name="changeori">ChangeOrientation</string>
    <string name="handler_button_text">Handler Button</string>
    <string name="handler_activity">Handler Activity</string>
    <string name="expandablelist2_button_text">ExpandableList Button</string>
    <string name="expandablelist2_activity">Expandable Activity</string>
    <string name="launcherlist_activity">LauncherList Activity</string>
    <string name="preferences_activity">Preferences Activity</string>
    <string name="viewdrag_button_text">DragView Button</string>
    <string name="viewdrag_activity">DragView Activity</string>
    <string name="preferedquery_button_text">Prefered Query</string>
    <string name="preferedquery_activity">Prefered Activity</string>
    <string name="select_city">Select City</string>
    <string name="activity_for_result">ActivityForResult</string>
    <string name="componentstart_activity">ComponentStartActivity</string>
    <string name="result_activity">Result Activity</string>
    <string name="viewcontact">View Contact</string>
    <string name="viewcontact_activity">ViewContact Activity</string>
    <string name="link_text_auto"><b>text1:</b> This is some text.  In
      this text are some things that are actionable.  For instance,
      you can click on http://www.google.com and it will launch the
      web browser, Or https://mail.google.com/, or rtsp://141.161.16.105:554/igp/isip4of5011306.mov
      You can click on google.com too.
      And, if you click on (415) 555-1212 it should dial the phone.
    </string>
    <string name="link_text_manual"><b>text2:</b> This is some other
      text, with a <a href="http://www.google.com">link</a> specified
      via an &lt;a&gt; tag.  Use a \"tel:\" URL
      to <a href="tel:4155551212">dial a phone number</a>.
    </string>
    <string name="link_test_activity">Link Test Activity</string>
    <string name="change_via_listener">Change Property1 Notify via Listener</string>
    <string name="change_via_intent">Change Property2 Notify via Intent</string>
    <string name="change_via_observable">Change Property3 Notify via Observable</string>
    <string name="start_service">Start Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="propertyobserverActivity">PropertyObserverActivity</string>
    <string name="propertyButton">PropertyObserver Activity</string>
    <string name="inflater_activity">InflaterActivity</string>
</resources>