<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal">
<TextView android:id="@+id/show"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""/>
<Button android:text="@string/button_text"
    android:id="@+id/ok"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/code_view"
    android:id="@+id/codeview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/max_view_button_text"
    android:id="@+id/maxview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/custom_view_button_text"
    android:id="@+id/customview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/table_layout_button_text"
    android:id="@+id/tablelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/frame_layout_button_text"
    android:id="@+id/framelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/color_light_button_text"
    android:id="@+id/colorlight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/relative_layout_button_text"
    android:id="@+id/relativelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:text="@string/basic_activity"
    android:id="@+id/basicactivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button android:id="@+id/advance_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/advance_activity_button_text"/>
</LinearLayout>