<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow>
    <Button android:id="@+id/listadapter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listadapter_button_text"/>
    <Button android:id="@+id/expandablelist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expandablelist_button_text" />
    </TableRow>
    <TableRow>
    <Button android:id="@+id/grid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_button_text" />
    <Button android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_button_text" />
    </TableRow>
    <TableRow>
    <Button android:id="@+id/dialog_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_text_1" />
    <Button android:id="@+id/listdialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listdialog_button_text" />
    </TableRow>
    <TableRow>
    <Button android:id="@+id/singledialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singledialog_button_text" />
    <Button android:id="@+id/multidialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multidialog_button_text" />
    </TableRow>
    <TableRow>
    <Button android:id="@+id/customdialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customdialog_button_text" />
    <Button android:id="@+id/logindialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logindialog_button_text" />
    </TableRow>
    <TableRow>
    <Button android:id="@+id/popupwindow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popupwindow_button_text" />
    <Button android:id="@+id/datedialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datedialog_button_text" />
    </TableRow>
</TableLayout>