<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TableRow>
<Button android:id="@+id/textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_view_button_text"/>    
<Button android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_button_text"/>
</TableRow>
<TableRow>
<Button android:id="@+id/imagebutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/image_button_text"/>
<Button android:id="@+id/patch9_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/patch9_button_text"/>
</TableRow>
<TableRow>
<Button android:id="@+id/radio_check_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/radio_check_button_text" />
<Button android:id="@+id/toggle_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/toggle_button_text"/>
</TableRow>
<TableRow>
<Button android:id="@+id/clock_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/clock_button_text" />
<Button android:id="@+id/image_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/image_button_text"/>
</TableRow>
<TableRow>
<Button android:id="@+id/scroll_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/scroll_button_text" />
<Button android:id="@+id/expandablelist2_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/expandablelist2_button_text" />
</TableRow>
</TableLayout>