<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button android:id="@+id/autocomplete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_button_text" />
    <Button android:id="@+id/spinner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_button_text"/>
    <Button android:id="@+id/time_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_date_button_text"/>
    <Button android:id="@+id/polygon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polygon_button_text" />
    <Button android:id="@+id/gl2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gl2_button_text" />
    <Button android:id="@+id/progress_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_button_text"/>
</LinearLayout>