<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView android:layout_x="20dip"
    android:layout_y="20dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/user_name"/>
<EditText android:layout_x="80dip"
    android:inputType="text"
    android:layout_y="15dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:width="200dp"/>
<TextView android:layout_x="20dip"
    android:layout_y="80dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pass_word"/>
<EditText android:layout_x="80dip"
    android:inputType="text"
    android:layout_y="75dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:width="200dp"
    android:password="true"/>        
<Button android:layout_x="130dip"
    android:layout_y="135dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/log_in"/>
</AbsoluteLayout>